# ChangeLog for dev-python/pymongo
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/pymongo/ChangeLog,v 1.22 2013/05/24 08:17:24 idella4 Exp $

  24 May 2013; Ian Delaney <idella4@gentoo.org> pymongo-2.5.1.ebuild:
  Add py3 support, adjust test phase accordingly

*pymongo-2.5.1 (24 May 2013)

  24 May 2013; Patrick Lauer <patrick@gentoo.org> +pymongo-2.5.1.ebuild:
  Bump

*pymongo-2.5 (25 Mar 2013)

  25 Mar 2013; Ultrabug <ultrabug@gentoo.org> -pymongo-2.4.ebuild,
  -pymongo-2.4.1.ebuild, -pymongo-2.4.2.ebuild, +pymongo-2.5.ebuild:
  Version bump, drop old

  17 Mar 2013; Markos Chandras <hwoarang@gentoo.org> metadata.xml:
  Add proxy-maintainers to metadata.xml

  11 Feb 2013; Michał Górny <mgorny@gentoo.org> pymongo-2.4.2-r1.ebuild:
  Oops. Remove debugging code from ebuild.

*pymongo-2.4.2-r1 (11 Feb 2013)

  11 Feb 2013; Michał Górny <mgorny@gentoo.org> +pymongo-2.4.2-r1.ebuild:
  Migrate to distutils-r1. Start test server on a semi-random unocuppied port.

*pymongo-2.4.2 (25 Jan 2013)

  25 Jan 2013; Ultrabug <ultrabug@gentoo.org> -pymongo-2.2.1.ebuild,
  +pymongo-2.4.2.ebuild:
  Version bump, drop old

*pymongo-2.4.1 (13 Dec 2012)

  13 Dec 2012; Ultrabug <ultrabug@gentoo.org> +pymongo-2.4.1.ebuild:
  Version bump

*pymongo-2.4 (28 Nov 2012)

  28 Nov 2012; Ultrabug <ultrabug@gentoo.org> +pymongo-2.4.ebuild:
  Version bump

  13 Nov 2012; Ian Delaney <idella4@gentoo.org> pymongo-2.3.ebuild:
  test phase for python3 proven unworkable, test restricted, fixes Bug #432552

*pymongo-2.3 (30 Aug 2012)

  30 Aug 2012; Ultrabug <ultrabug@gentoo.org> -pymongo-2.1.1.ebuild,
  -pymongo-2.2.ebuild, +pymongo-2.3.ebuild, metadata.xml:
  Version bump, welcome new proxy-maintainer Lujeni, drop old.

*pymongo-2.2.1 (09 Jul 2012)

  09 Jul 2012; Ultrabug <ultrabug@gentoo.org> -pymongo-2.1.ebuild,
  +pymongo-2.2.1.ebuild:
  Version bump, drop old

*pymongo-2.2 (11 May 2012)
