@@ -1,6 +1,10 @@
 # ChangeLog for dev-python/pymongo
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pymongo/ChangeLog,v 1.22 2013/05/24 08:17:24 idella4 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pymongo/ChangeLog,v 1.23 2013/05/26 08:19:47 idella4 Exp $
+
+  26 May 2013; Ian Delaney <idella4@gentoo.org> pymongo-2.5.1.ebuild,
+  pymongo-2.5.ebuild:
+  add py3.1 support, fix to test phase
 
   24 May 2013; Ian Delaney <idella4@gentoo.org> pymongo-2.5.1.ebuild:
   Add py3 support, adjust test phase accordingly
